8145515: addEventFilter for combobox editor does not react on key action enter